styles/cardStyle.css
/* Spotlight cards */
.spotlightSlide {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 2rem 1rem 2.5rem;
    width: 13rem !important;
    height: 20rem;
    color: white;
    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
    border-radius: 22px;
    background-image: linear-gradient( #000000ce, 100%, rgba(0, 0, 0, 1.249)),
    url('https://images.unsplash.com/photo-1648765825798-57d76ecd38e3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
    margin-right: 1rem;
    transition: all .5s;
    cursor: pointer;
}



.spotlightSlide:first-of-type {
    margin-left: 1rem;
}

.spotlightSlide:hover {
    transform-origin: center;
    transform: rotateX(-7deg) translateY(-2px);
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8);
    margin-right: 1rem;
}

.spotlightTitle {
    font-size: 26pt;
    word-wrap: break-word;
}

@media screen and (max-width: 786px) {
    .spotlightTitle {
        font-size: 18pt;
    }
}

.spotlightMeta {

    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    height: fit-content;
}

.spotlightDate {
    font-size: 10pt;
    margin-bottom: .25em;
    color: #B6B6B6;
    background-color: #00000046;
    padding: .25em .5em;
}

.spotlightAuthor {
    cursor: pointer;
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: .25rem;
    border-radius: 3px;
}

.spotlightAuthor:hover {
    background-color: #ffffff3c;
}

.spotlightAuthorImage {
    margin-right: .5em;
    background-color: aliceblue;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: contain;
    border-radius: 100%;
    width: 1em;
    height: 1em;
}

.spotlightAuthorName {
    font-size: 14pt;
}

.articleCard {
    height: 20rem;
    width: 15rem;
    display: flex;
    flex-direction: column;
    margin-bottom: 5rem;
}

.articleCardTitle {
    height: fit-content;
    margin-bottom: 1rem;
}

.tags {
    display: flex;
    flex-direction: row;
    width: 100%;
    align-content: center;
    text-decoration: none !important;
}

.tag {
    padding: .1rem .25rem;
    width: fit-content;
    height: fit-content;
    color: var(--material_dark);
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: .5em;
    border-radius: 3px;
    text-decoration: none !important;
}

.tag:first-child {
    margin-left: 0;
}

.article_card .subtitle {
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: pre-line;
    font-size: 13pt;
}

@media screen and (max-width: 768px) {
    .spotlightSlide {
        width: 9rem !important;
        height: 12rem;
    }
    .articleCard {
        width: 13rem !important;
        height: 15rem;
        margin: 1rem;
    }
}

